# interactive-fiction

./: index.html  package-lock.json  package.json  tsconfig.json
fastapi_server/: config.example.toml  image_flux2_klein_text_to_image.json  main.py  pyproject.toml
fastapi_server/interactive_fiction_server/: __init__.py  prompts.py  server.py  utils.py
functions/: [[path]].ts
functions/api/: [[path]].ts  prompts.ts
server/: .gitignore  pyproject.toml
server/src/interactive_fiction_server/: config.py  prompts.py  server.py
server/src/server/: image_flux2_klein_text_to_image.json  main.py
src/: core.ts  main.ts  modal.ts  openai-api.ts  utils.ts
src/styles/: base.css  main.css  modal.css  sidebar.css
