[project]
name = "interactive-fiction-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[tool.uv]
package = false
